<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2011 Kurtis L. Nusbaum
  
  This file is part of UDJ.
  
  UDJ is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 2 of the License, or
  (at your option) any later version.
  
  UDJ is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.
  
  You should have received a copy of the GNU General Public License
  along with UDJ.  If not, see <http://www.gnu.org/licenses/>.
-->
<resources>

    <string name="app_name">UDJ</string>
    <string name="udj_name">UDJ</string>
    <string name="username_text">Username:</string>
    <string name="username_hint">Username</string>
    <string name="password_text">Password:</string>
    <string name="password_hint">Password</string>
    <string name="login_text">Login</string>
    <string name="authenticating">Logging In...</string>
    <string name="joining_event">Joining Event...</string>
    <string name="no_playlist_items">No items in the playlist</string>
    <string name="no_library_songs">No Results To Display</string>
    <string name="quit_title">Quit?</string>
    <string name="quit_message">Are you sure you want to leave the party?</string>
    <string name="no_event_items">No events nearby</string>
    <string name="events_load_error">Error loading events</string>
    <string name="login_error">Login Error</string>
    <string name="login_error_message">Try reentering your username and password</string>
    <string name="song_search_hint">Search for songs...</string>
    <string name="event_search_hint">Search for events...</string>
    <string name="searching_lib">Searching library...</string>
    <string name="bad_password">Password incorrect</string>
    <string name="bad_username_and_password">Couldn\'t find account matching the given username and password</string>
    <string name="new_account_text">Sign in to UDJ</string>
    <string name="need_password">Password is needed</string>
    <string name="no_location_error">Could not retrieve location</string>
    <string name="no_current_song">No Current Song</string>
    <string name="no_account_error">No Account Selected</string>
    <string name="added_by">Added by</string>
    <string name="by">By</string>
    <string name="you">You</string>
    <string name="song_added_notification_content">Tap to dismiss</string>
    <string name="song_add_failed_title">Adding Song(s) Failed</string>
    <string name="song_add_failed_content">Tap here to retry</string>
    <string name="event_ended_title">Event Ended</string>
    <string name="event_ended_message">The event has ended</string>
    <string name="no_network_connection">No network connection available</string>
    <string name="event_join_fail_title">Joining Event Failed</string>
    <string name="unknown_error_message">Unknown error. Please contact developers.</string>
    <string name="server_join_fail_message">We couldn\'t reach the event host</string>
    <string name="auth_join_fail_message">Username and password didn\'t work</string>
    <string name="event_over_join_fail_message">That event has ended</string>
    <string name="no_network_join_fail_message">No internet connection</string>
    <string name="event_host_label">Host:</string>
    <string name="voting_up_message">Voting up</string>
    <string name="voting_down_message">Voting down</string>
    <string name="share_via">Share via</string>
    <string name="song_share_1">We\'re listening to</string>
    <string name="song_share_2">at</string>
    <string name="vote_up">Vote up</string>
    <string name="vote_down">Vote down</string>
    <string name="remove_song">Remove from playlist</string>
    <string name="total_votes">Rank</string>
    <string name="logout_of_other_event">Logout</string>
    <string name="already_in_event_join_fail_message">You\'re logged into</string>
    <string name="menu_random">Random</string>
    <string name="adding_song">Adding</string>
    <string name="dont_have_account">        <![CDATA[
    Don\'t have an account? <a href="https://www.udjevents.com/registration/register/">
      Sign up here!</a>]]></string>
  <string name="removing_song">Removing Song</string>
  <string name="song_remove_failed_title">Removing Song(s) Failed</string>
  <string name="song_remove_failed_content">Tap here to retry</string>
  <string name="api_version_error_message">This Version of UDJ no longer works. Please download the latest update for it.</string>
  <string name="event_label">Event:</string>
  <string name="event_password">Event Password</string>
  <string name="unknown_auth_error">We\'re currently having difficulties.</string>
  <string name="check_updates">Check For Updates</string>
  <string name="password_required">Password Required</string>

    <!-- Stuff for action bar compatibility -->
    <string name="alternate_title">An alternate title that is long</string>
    <string name="toggle_title">Toggle title</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_search">Search</string>
    <string name="menu_share">Share</string>

    <!-- Pull to Refresh -->
    <string name="pull_to_refresh_pull_label">Pull to refresh…</string>
    <string name="pull_to_refresh_release_label">Release to refresh…</string>
    <string name="pull_to_refresh_refreshing_label">Loading…</string>
    <string name="pull_to_refresh_tap_label">Tap to refresh…</string>

</resources>
