<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2011 Kurtis L. Nusbaum
  
  This file is part of UDJ.
  
  UDJ is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 2 of the License, or
  (at your option) any later version.
  
  UDJ is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.
  
  You should have received a copy of the GNU General Public License
  along with UDJ.  If not, see <http://www.gnu.org/licenses/>.
-->
<LinearLayout 
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
>
  <TextView  
    android:id="@+id/LoginTitle"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/udj_name"
    android:layout_gravity="center_horizontal"
    android:gravity="center_horizontal"
    android:textSize="24sp"
  />
  <TextView
    android:id="@+id/usernameText"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" 
    android:text="@string/username_text"
  />
  <EditText 
    android:id="@+id/usernameEdit"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:hint="@string/username_hint"
  />
  <TextView
    android:id="@+id/passwordText"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" 
    android:text="@string/password_text"
  />
  <EditText 
    android:id="@+id/passwordEdit"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:hint="@string/password_hint"
  />
  <Button
    android:id="@+id/loginButton"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/login_text"
    android:layout_gravity="center_horizontal"
  />
</LinearLayout>

